# deep_search

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  plan.md  pyproject.toml  requirements.txt
src/: config.py
src/agentic_deep_search/: __init__.py  example.py
src/agents/: clarification_agent.py  planning_agent.py  research_manager.py  search_agent.py  writer_agent.py
src/model/: model.py
tests/: test_example.py
